src/test/deca/codegen/valid/mult_and_plus.deca
// Description:
//   Test de la bonne utilisation des registres
//
// Resultats:
//    ima_output: 23
//

{
    int a = 2;
    int b = 7;
    int c = a*b + a + b;
    println(c);
}
