src/test/deca/codegen/invalid/divide_zero.deca
// Description:
//   Test de la division par zéro
//
// Resultats:
//  ima_output: overflow
//

{
    int a = 1;
    int b = 0;
    int c = a/b;
}